@@ -1,7 +1,7 @@
 <div xmlns="http://www.w3.org/1999/xhtml"
      xmlns:tal="http://xml.zope.org/namespaces/tal">
-  <span tal:content="view" />
+  <span tal:content="nocall: view" />
   <span tal:content="context" />
   <span tal:content="request" />
-  <span tal:content="options.test" />
+  <span tal:content="options/test" />
 </div>
